--- a/softwarehub-arquitetura-de-produção-completa.html
+++ b/softwarehub-arquitetura-de-produção-completa.html
@@ -270,7 +270,7 @@ upstream frontend {
 
 server {
     listen 80;
-    server_name softwarehub-xp.wake.tech;
+    server_name soft-inventario-xp.wake.tech;
     
     client_max_body_size 10M;
     
