iajuste de rebuild

--- a/index.html
+++ b/index.html
@@ -1473,7 +1473,7 @@
                     body: JSON.stringify(softwareData)
                 });
                 
-                console.log('=== RESPOSTA RECEBIDA ===');
+                console.log('=== forRESPOSTA RECEBIDA ===');
                 console.log('Response status:', response.status);
                 console.log('Response ok:', response.ok);
                 console.log('Response headers:', response.headers);
